<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:visible="false"/>
    <item
        android:id="@+id/action_adicionar"
        android:icon="@drawable/ic_action_adicionar"
        android:showAsAction="never"
        android:title="@string/adicionar"
        android:visible="false"/>
    <item
        android:id="@+id/action_editar"
        android:icon="@drawable/ic_action_editar"
        android:showAsAction="never"
        android:title="@string/editar"
        android:visible="false"/>
    <item
        android:id="@+id/action_salvar"
        android:icon="@drawable/ic_action_salvar"
        android:showAsAction="never"
        android:title="@string/salvar"
        android:visible="false"/>
    <item
        android:id="@+id/action_atualizar"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="never"
        android:title=""
        android:visible="false"/>
    
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="never"
        android:title=""
        android:visible="false"/>

</menu>