<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- Campo que engloba a parte do spinner e do usuario -->

    <LinearLayout
        android:id="@+id/usuarioSpinnerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Parte onde fica o campo do usuário (spinner) -->

        <Spinner
            android:id="@+id/usuarioSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Cabeçalho de cada sessão -->

    <LinearLayout
        android:id="@+id/cabecalhoSessao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <!-- Nome de cada sessão -->

        <TextView
            android:id="@+id/nomeSessao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:text="@string/informacoes_do_usuario"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Divisor superior de cada sessão -->
        
        <View
            android:id="@+id/divisorSessao"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:background="#DADADC" >
        </View>
    </LinearLayout>

    <!-- android:background="#fed201" -->

	<!-- Campo que engloba todos os icones, titulos e divisor de função -->

    <LinearLayout
        android:id="@+id/corpoFuncao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:orientation="vertical" >

        <!-- Campo que engloba o icone a função -->
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightSmall" >

         
            <ImageView
                android:id="@+id/iconeFuncao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/icone_home"
                android:contentDescription="@string/icone_funcao" />

            <TextView
                android:id="@+id/tituloFuncao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teste"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/contador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
        			android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/contador_background"
                    android:text="@string/descricao"
                    android:textColor="#ffffff" />

            </RelativeLayout>
 
        </LinearLayout>

        <!-- Divisor inferior da função -->

        <View
            android:id="@+id/divisorFuncao"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#DADADC" >
        </View>
    </LinearLayout>

</RelativeLayout>